--- a/src/app/components/site-app/site-app-layout/site-app-signin/site-app-signin.component.html
+++ b/src/app/components/site-app/site-app-layout/site-app-signin/site-app-signin.component.html
@@ -15,7 +15,7 @@
                 </mat-form-field>
                 <mat-form-field class="form-field" appearance=outline>
                   <mat-label>Password</mat-label>
-                  <input matInput type=password name=pwd ngModel #passwordInput="ngModel" required>
+                  <input matInput type=password name=password ngModel #passwordInput="ngModel" required>
                 </mat-form-field>
                 <div class="login-b">
                   <button mat-raised-button class="l-btn mat-elevation-z5">
