--- a/src/app/components/site-app/site-app-layout/site-app-signup/site-app-signup.component.scss
+++ b/src/app/components/site-app/site-app-layout/site-app-signup/site-app-signup.component.scss
@@ -8,7 +8,8 @@
     justify-content: center;
   }
   mat-card{
-    width: 35%;
+    width: 30%;
+    height: 60%;
     padding-top:0;
     padding-bottom: 0;
     border-radius: 20px;
