added main-app pages

--- a/src/app/components/main-app/main-app-layout/main-app-layout.component.html
+++ b/src/app/components/main-app/main-app-layout/main-app-layout.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<app-common-side-nav>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+</app-common-side-nav>
