Added CRUD post routes for patients

--- a/src/app/components/common/common-header/common-header.component.html
+++ b/src/app/components/common/common-header/common-header.component.html
@@ -1,13 +1,13 @@
-<mat-toolbar class="mat-elevation-z8 toolbar">
+<mat-toolbar class="mat-elevation-z5 toolbar">
   <span class="example-spacer"></span>
   <div class="user-profile">
     <div class="row">
     <ul>
       <li>
-        <button mat-mini-fab color=basic class="notification-button"><mat-icon class="mat-icon" inline=true>notifications</mat-icon></button>
+        <button mat-mini-fab color=basic class="notification-button"><img src="./../../../../assets/icons/bell.png" width="20px"></button>
       </li>
       <li>
-        <button mat-mini-fab color=basic class="chat-button"><mat-icon class="mat-icon" inline=true>chat_bubble_outline</mat-icon></button>
+        <button mat-mini-fab color=basic class="chat-button"><img src="./../../../../assets/icons/chat.png" width="20px"></button>
       </li>
       <li>
         <button mat-button class="user-button" [matMenuTriggerFor]="menu">
