New UI components are added

--- a/src/app/components/main-app/main-app-layout/main-app-dashboard/main-app-dashboard.component.scss
+++ b/src/app/components/main-app/main-app-layout/main-app-dashboard/main-app-dashboard.component.scss
@@ -1,17 +1,21 @@
-.container
-{
-  align-items: center;
-  min-height: 90vh;
-  display: flex;
-  justify-content: center;
-  .c-icon
-  {
-  width: 150px;
+.grid-container {
+  margin: 20px;
+}
+
+.dashboard-card {
   position: absolute;
-  }
-  .p
-  {
-  margin-top: 20%;
-  opacity: 0.6;
-  }
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+}
+
+.more-button {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+}
+
+.dashboard-card-content {
+  text-align: center;
 }
