--- a/src/app/components/main-app/main-app-layout/main-app-layout.component.html
+++ b/src/app/components/main-app/main-app-layout/main-app-layout.component.html
@@ -1,5 +1,6 @@
-<app-common-side-nav>
+<app-nav-tool-bar>
   <main>
     <router-outlet></router-outlet>
   </main>
-</app-common-side-nav>
+  </app-nav-tool-bar>
+
