--- a/src/styles.scss
+++ b/src/styles.scss
@@ -184,10 +184,10 @@ body {
 
 // material icon
 .mat-icon {
-    width: 24px;
-    height: 24px;
-    //padding-right: 15px;
-    font-size: 130%;
+    width: 30px;
+    height: 3px;
+    padding-right: 15px;
+    font-size: 150%;
 }
 
 // ul and li
