--- a/src/app/components/common/nav-tool-bar/nav-tool-bar.component.scss
+++ b/src/app/components/common/nav-tool-bar/nav-tool-bar.component.scss
@@ -1,8 +1,46 @@
-.toolbar
+.sidenav-container {
+  height: 100%;
+}
+
+.sidenav {
+  width: 250px;
+  border-radius: 0px 20px 20px 0px;
+  background-color: #20F5D8;
+  box-shadow: 1px 1px 10px 1px #32756c9c;
+
+  .create-patient-button
+  {
+    width: 60%;
+    display: flex;
+    margin: auto;
+    background-color: #19C2AB;
+    color: #F8F9FA;
+    font-size: 110%;;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px 1px #0f756741;
+  }
+
+  .img-icon
+  {
+    margin-left: auto;
+  }
+}
+
+.sidenav .mat-toolbar {
+  background: inherit;
+}
+
+.sidenav .mat-nav-list
 {
+  margin-top: 20%;
+}
+
+.mat-toolbar {
+  position: sticky;
+  top: 0;
+  z-index: 1;
   background-color: #FFFFFF;
   height: 58px;
-  //box-shadow: 1px 1px 50px rgba(26, 26, 26, 0.685);
 
   .example-spacer {
     flex: 1 1 auto;
@@ -42,4 +80,3 @@
     }
   }
 }
-
