--- a/src/app/components/main-app/main-app-layout/main-app-add-patient/main-app-add-patient.component.scss
+++ b/src/app/components/main-app/main-app-layout/main-app-add-patient/main-app-add-patient.component.scss
@@ -9,12 +9,12 @@
   }
   .heading-page
   {
-    margin-top: 2%;
+    margin-top: 1%;
     font-size: 150%;
     font-weight: 500;
   }
   .mat-card{
-    margin-top: 15px;
+    margin-top: 10px;
     width: 100%;
     padding-top: 0px;
     padding-bottom: 0px;
@@ -40,5 +40,13 @@
 }
 
 mat-spinner {
-  margin: auto
+  margin: 10% auto;
+}
+
+::ng-deep .mat-form-field-flex > .mat-form-field-infix { padding: 0.4em 0px !important;}
+::ng-deep .mat-form-field-label-wrapper { top: -1.5em; }
+
+::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+    transform: translateY(-1.1em) scale(.75);
+    width: 133.33333%;
 }
