--- a/src/app/components/main-app/main-app-layout/main-app-my-patients/main-app-my-patients.component.html
+++ b/src/app/components/main-app/main-app-layout/main-app-my-patients/main-app-my-patients.component.html
@@ -1,28 +1,33 @@
 <div class="container">
 <h2 class="mat-h3">My Patients</h2>
 <div class="mat-elevation-z6">
-  <table mat-table class="full-width-table" matSort aria-label="Elements">
-    <!-- Id Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let p of post">{{p.id}}</td>
-    </ng-container>
+  <table mat-table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Patient Name</th>
-      <td mat-cell *matCellDef="let p of post">{{p.name}}</td>
+      <td mat-cell *matCellDef="let post">{{post.name}}</td>
     </ng-container>
     <!-- Age column -->
     <ng-container matColumnDef="age">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Age</th>
-      <td mat-cell *matCellDef="let post">{{post.name}}</td>
+      <td mat-cell *matCellDef="let post">{{post.age}}</td>
     </ng-container>
 
     <!-- Gender column -->
     <ng-container matColumnDef="gender">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Gender</th>
-      <td mat-cell *matCellDef="let post">{{post.name}}</td>
+      <td mat-cell *matCellDef="let post">{{post.gender}}</td>
+    </ng-container>
+
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let post" class="action-link ml-4">
+        <a [routerLink]="['/edit',post.id]" class=ml-4>
+          <button mat-icon-button><mat-icon color=accent>edit_outline</mat-icon></button></a>
+        <button mat-icon-button class=ml-4 (click)="onDelete(post.id)"><mat-icon color=accent>delete_outline</mat-icon></button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -33,7 +38,7 @@
       [length]="post?.length"
       [pageIndex]="0"
       [pageSize]="10"
-      [pageSizeOptions]="[20, 40, 80, 100]">
+      [pageSizeOptions]="[10, 20, 40, 80, 100]">
   </mat-paginator>
 </div>
 </div>
