added my patient data UI, updated few UI's

--- a/src/app/components/main-app/main-app-layout/main-app-add-patient/main-app-add-patient.component.html
+++ b/src/app/components/main-app/main-app-layout/main-app-add-patient/main-app-add-patient.component.html
@@ -1,4 +1,4 @@
-<div class="add-patient-page">
+<div class="add-patient-page" *ngIf="!isLoading">
   <div class="container-fluid">
     <div class="row">
       <div class="heading-page" *ngIf="!isLoading">
