--- a/src/app/components/main-app/main-app-layout/main-app-my-patients/main-app-my-patients.component.html
+++ b/src/app/components/main-app/main-app-layout/main-app-my-patients/main-app-my-patients.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<mat-spinner color=accent *ngIf="isLoading"></mat-spinner>
+<div class="container" *ngIf="!isLoading">
 <h2 class="mat-h3">My Patients</h2>
 <div class="mat-elevation-z6">
   <table mat-table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
@@ -31,7 +32,7 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let post; columns: displayedColumns;"></tr>
+    <tr class="data-row" mat-row *matRowDef="let post; columns: displayedColumns;" [routerLink]="['/my-patient',post.id]"></tr>
   </table>
 
   <mat-paginator #paginator
