--- a/src/app/components/main-app/main-app-layout/main-app-my-patients/main-app-my-patients.component.scss
+++ b/src/app/components/main-app/main-app-layout/main-app-my-patients/main-app-my-patients.component.scss
@@ -7,3 +7,18 @@
 .full-width-table {
   width: 100%;
 }
+
+.data-row
+{
+  cursor: pointer;
+}
+.data-row:hover
+{
+  cursor: pointer;
+  background-color: #fff;
+  box-shadow: 0px 5px 10px 8px #e6e6e6;
+}
+
+mat-spinner {
+  margin: 10% auto;
+}
